Script optimization & adding comments/clarifications